Fixed text overflow & line breaks not being rendered

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,8 @@ Highlight18 {
     background: green;
     color: black;
 }
+
+p {
+    margin-top:0.6px;
+    margin-bottom:0.6px
+ }
